--- a/views/versement_view.xml
+++ b/views/versement_view.xml
@@ -7,8 +7,8 @@
             <tree>
                 <field name="ref"/>
                 <field name="montant_versement"/>
-                <field name="heure_versement"/>
-                <field name="nbre_versement"/>
+<!--                <field name="heure_versement"/>-->
+<!--                <field name="nbre_versement"/>-->
                 <field name="servicepompiste_id"/>
             </tree>
         </field>
@@ -24,8 +24,8 @@
                         <group>
                             <field name="ref"/>
                             <field name="montant_versement"/>
-                            <field name="heure_versement"/>
-                            <field name="nbre_versement"/>
+<!--                            <field name="heure_versement"/>-->
+<!--                            <field name="nbre_versement"/>-->
                         </group>
                         <group>
                             <field name="servicepompiste_id"/>
