--- a/views/detailventecarburant_view.xml
+++ b/views/detailventecarburant_view.xml
@@ -10,6 +10,7 @@
                         <group>
                             <field name="nom_carb"/>
                             <field name="pu"/>
+                            <field name="montant"/>
                             <field name="servicepompiste_id"/>
                         </group>
                     </group>
@@ -25,6 +26,7 @@
             <tree string="detailventecarburant">
                 <field name="nom_carb"/>
                 <field name="pu"/>
+                <field name="montant"/>
                 <field name="servicepompiste_id"/>
             </tree>
         </field>
