--- a/views/releveindex_view.xml
+++ b/views/releveindex_view.xml
@@ -9,9 +9,10 @@
                     <group>
                         <group>
                             <field name="ref"/>
-                            <field name="index"/>
-<!--                            <field name="index_arrive"/>-->
+                            <field name="index_matin"/>
+                            <field name="index_soir"/>
                             <field name="litrage"/>
+                            <field name="carburant"/>
                             <field name="date_releve"/>
                         </group>
                         <group>
@@ -34,9 +35,10 @@
         <field name="arch" type="xml">
             <tree string="releveindex">
                 <field name="ref"/>
-                <field name="index"/>
-<!--                <field name="index_arrive"/>-->
+                <field name="index_matin"/>
+                <field name="index_soir"/>
                 <field name="litrage"/>
+                <field name="carburant"/>
                 <field name="date_releve"/>
                 <field name="compteur_id"/>
             </tree>
