--- a/views/pompe_view.xml
+++ b/views/pompe_view.xml
@@ -14,6 +14,7 @@
 <!--                            <field name="litrage_essence"/>-->
 <!--                            <field name="litrage_gasoile"/>-->
                             <field name="description"/>
+<!--                            <field name="date_jour"/>-->
                         </group>
                         <group>
                             <field name="station_id"/>
@@ -35,17 +36,6 @@
         </field>
     </record>
 
-    <record id= "pompe_pivot_view" model="ir.ui.view">
-       <field name="name">eaglefuel.pompe.pivot</field>
-       <field name="model">eaglefuel.pompe</field>
-       <field name="arch" type="xml">
-           <graph string="Essence/Date">
-               <field name="date" type ="row"/>
-               <field name="litrage_essence"/>
-           </graph>
-       </field>
-    </record>
-
     <record model="ir.ui.view" id="pompe_tree_view">
         <field name="name">eaglefuel.pompe.form</field>
         <field name="model">eaglefuel.pompe</field>
@@ -65,7 +55,7 @@
     <record model="ir.actions.act_window" id="pompe_action">
         <field name="name">Pompe</field>
         <field name="res_model">eaglefuel.pompe</field>
-        <field name="view_mode">tree,form,graph,pivot</field>
+        <field name="view_mode">tree,form,graph</field>
     </record>
 
     <menuitem name="Pompes" id="sub_pompe_root" parent="station_root"/>
