suppression de la classe ilo

--- a/views/pompe_view.xml
+++ b/views/pompe_view.xml
@@ -61,7 +61,18 @@
             </tree>
         </field>
     </record>
-
+    <record id= "pompe_graph_view" model="ir.ui.view">
+       <field name="name">eaglefuel.pompe.graph</field>
+       <field name="model">eaglefuel.pompe</field>
+       <field name="arch" type="xml">
+           <graph string="Litrage/Montant">
+               <field name="date" type="row"/>
+               <field name="total_litres" type="measure"/>
+<!--               <field name="total_litres" type="measure"/>-->
+<!--               <field name="total_litres" type="measure"/>-->
+           </graph>
+       </field>
+    </record>
     <record model="ir.actions.act_window" id="pompe_action">
         <field name="name">Pompe</field>
         <field name="res_model">eaglefuel.pompe</field>
