--- a/views/station_view.xml
+++ b/views/station_view.xml
@@ -69,6 +69,33 @@
                 <p class="o_view_nocontent_smiling_face"></p>
            </field>
     </record>
+<!--    view employe-->
+    <record model="ir.ui.view" id="hr_employee_form">
+        <field name="name">hr.employee.form</field>
+        <field name="model">hr.employee</field>
+        <field name="type">tree</field>
+        <field name="inherit_id" ref='hr.view_employee_tree'/>
+        <field name="arch" type="xml">
+            <xpath expr = "//field[@name='department_id']" position = "after">
+                <field name="station_id"/>
+                <field name="servicepompiste_qm_id"/>
+                <field name="servicepompiste_pompiste_id"/>
+            </xpath>
+        </field>
+    </record>
+    <record model="ir.ui.view" id="hr_employee_form">
+        <field name="name">hr.employee.form</field>
+        <field name="model">hr.employee</field>
+        <field name="type">tree</field>
+        <field name="inherit_id" ref='hr.view_employee_form'/>
+        <field name="arch" type="xml">
+            <xpath expr = "//field[@name='department_id']" position = "after">
+                <field name="station_id"/>
+                <field name="servicepompiste_qm_id"/>
+                <field name="servicepompiste_pompiste_id"/>
+            </xpath>
+        </field>
+    </record>
 
     <menuitem name="Gas Station" id="station_root" sequence="7"/>
     <menuitem name="Stations" id="sub_station_root" parent="station_root"/>
