--- a/views/pompe_view.xml
+++ b/views/pompe_view.xml
@@ -24,6 +24,10 @@
                             <field name="litrage_gasoile"/>
                             <field name="total_litres"/>
                         </group>
+                        <group>
+                            <field name="is_active"/>
+                            <field name="status"/>
+                        </group>
                     </group>
                     <notebook>
                         <page string="Pistoles">
